Add the DynamoDB with spring-data