@@ -2,12 +2,14 @@ package com.github.poad.examples.service;
 
 import com.github.poad.examples.repository.SongRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Pageable;
+import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
+@Scope("singleton")
 public class SongDynamoDBService {
     private final SongRepository repository;
 
@@ -15,23 +17,22 @@ public class SongDynamoDBService {
         this.repository = repository;
     }
 
-    public List<Song> findByTitle(String name) {
-        return repository.findByTitle(name, Pageable.unpaged())
-                .map(song -> new SongDynamoDBService.Song(song.getTitle(), song.getArtist()))
-                .toList();
+    public Song find(String artist, String title) {
+        com.github.poad.examples.entity.Song song = repository.find(artist, title);
+        return new SongDynamoDBService.Song(song.getTitle(), song.getArtist());
     }
 
     public List<Song> findByArtist(String artist) {
-        return repository.findByArtist(artist, Pageable.unpaged())
+        return repository.findByArtist(artist).stream()
                 .map(song -> new SongDynamoDBService.Song(song.getTitle(), song.getArtist()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static class Song {
         private final String title;
         private final String artist;
 
-        public Song(String title, String artist) {
+        Song(String title, String artist) {
             this.title = title;
             this.artist = artist;
         }
